--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Bored.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bored.data.gz",
-        frameworkUrl: buildUrl + "/Bored.framework.js.gz",
-        codeUrl: buildUrl + "/Bored.wasm.gz",
+        dataUrl: buildUrl + "/Bored.data",
+        frameworkUrl: buildUrl + "/Bored.framework.js",
+        codeUrl: buildUrl + "/Bored.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Bored",
